<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">erpchat</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="account">用户名:</string>
    <string name="input_username">输入用户名!</string>
    <string name="password">密码:</string>
    <string name="input_password">输入密码!</string>
    <string name="action_settings">Settings</string>
    <string name="main">首页</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="remember">记住密码</string>
    <string name="update_password">修改密码</string>
    <string name="logout_user">注销用户</string>
    <string name="clearup_chat_record">清除聊天记录</string>
    <string name="ignore_warning">Ignore Warning!</string>
    <string name="use_guide">使用帮助</string>
    <string name="about">关于ERP</string>
    <string name="person_info">个人信息</string>
    <string name="normal">通用</string>
    <string name="message_notify">消息通知</string>
    <string name="personal">隐私</string>
    <string name="chat_number">账号：xxx</string>
    <string name="place_holder">xxx</string>
    <string name="head">头像</string>
    <string name="name">名字</string>
    <string name="code">账号</string>
    <string name="code_2d">我的二维码</string>
    <string name="me">我</string>
    <string name="personal_head">个人头像</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="new_name">新的名字</string>
    <string name="my_2d_code">我的二维码</string>
    <string name="add_me">扫一扫二维码，加我微信</string>
    <string name="contacts">联系人</string>

</resources>
