<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f212d"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >

        <ImageView
            android:id="@+id/image_view_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ignore_warning"
            android:paddingEnd="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="1dp"
            android:paddingStart="10dp"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/image_view_return"
            android:layout_toRightOf="@+id/image_view_return"
            android:text="@string/person_info"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_2d_code"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ignore_warning"
            android:padding="10dp"
            android:src="@drawable/title_menu_item" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/image_view_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ignore_warning"
            android:padding="5dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_view_me"
            android:layout_toRightOf="@+id/image_view_me"
            android:paddingTop="15dp"
            android:text="@string/place_holder"
            android:textColor="#000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_view_2d_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_me"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ignore_warning"
            android:padding="10dp"
            android:src="@drawable/my_2d_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_me"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
           	android:layout_below="@+id/image_view_2d_code" />
    </RelativeLayout>

</LinearLayout>